erDiagram
    REGION ||--o{ RESTAURANT : classifies
    FOOD_CATEGORY ||--o{ RESTAURANT : represents
    CREATOR o|--o{ VIDEO : publishes
    RESTAURANT ||--o{ VISIT : has
    CREATOR ||--o{ VISIT : visits
    VIDEO ||--o{ VISIT : proves
    MEMBER_ACCOUNT ||--o{ AUTH_SESSION : owns

    REGION {
        identifier id PK
        text name UK
        text code UK
        integer sortOrder UK
        boolean active
    }

    FOOD_CATEGORY {
        identifier id PK
        text name UK
        text code UK
        integer sortOrder UK
        boolean active
    }

    RESTAURANT {
        identifier id PK
        identifier regionId FK
        identifier foodCategoryId FK
        text kakaoPlaceIdentity UK
        text name
        text kakaoPlaceUrl
        text roadAddress
        text detailAddress "optional"
        text phoneNumber
        status publicationStatus
        status lifecycleStatus
        timestamp createdAt
        timestamp updatedAt
        timestamp deletedAt "required only when deleted"
    }

    CREATOR {
        identifier id PK
        text externalChannelId UK
        text channelName
        text channelUrl
        status publicationStatus
        status lifecycleStatus
        status externalAvailabilityStatus
        timestamp lastExternalStatusCheckedAt
        timestamp createdAt
        timestamp updatedAt
        timestamp deletedAt "required only when deleted"
    }

    VIDEO {
        identifier id PK
        identifier creatorId FK "optional; matched by external channel"
        text externalVideoId UK
        text publisherExternalChannelId
        text title
        text sourceUrl
        text thumbnailUrl
        timestamp publishedAt "optional, not visit date"
        status publicationStatus
        status lifecycleStatus
        status externalAvailabilityStatus
        timestamp lastExternalStatusCheckedAt
        timestamp createdAt
        timestamp updatedAt
        timestamp deletedAt "required only when deleted"
    }

    VISIT {
        identifier id PK
        identifier restaurantId FK "composite UK part"
        identifier creatorId FK "composite UK part; matches Video publisher channel"
        identifier videoId FK "composite UK part"
        status publicationStatus
        status lifecycleStatus
        timestamp createdAt
        timestamp updatedAt
        timestamp deletedAt "required only when deleted"
    }

    MEMBER_ACCOUNT {
        identifier id PK
        text email UK
        text passwordCredential
        status status
        status role "MEMBER or ADMIN"
        timestamp createdAt
        timestamp updatedAt
    }

    AUTH_SESSION {
        identifier sessionId PK
        identifier memberAccountId FK
        text tokenCredential UK
        text tokenFamilyId
        timestamp createdAt
        timestamp expiresAt
        timestamp invalidatedAt "optional; MEMBER max 3, ADMIN max 1"
    }
